fixed .cpf-occurrence z-index

--- a/CodePrinter.less
+++ b/CodePrinter.less
@@ -275,6 +275,7 @@
         color:transparent;
         position:absolute;
         top:0; left:0;
+        z-index:10;
         
         &.active {
             .shadow(0 0 4px rgba(0,0,0,0.2));
